# AppliedMathLearning

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py  vcpkg.json
MaLAlgo/config/cmake/: add_targets.cmake
MaLAlgo/source/: CMakeLists.txt  greeting.cpp  greeting.hpp
MaLAlgo/test/: CMakeLists.txt  greeting_test.cpp  heybro.cpp
SDExperiment/: vcpkg.json
Template/: .gitignore  CMakeLists.txt  vcpkg.json
Template/source/: CMakeLists.txt
Template/test/: CMakeLists.txt  MainTestSpec.cpp
Test1/: CMakeLists.txt
Test1/test/: heybro.cpp
Testtt/: CMakeLists.txt
Testtt/tests/: heybro.cpp
Videos/: Dockerfile
internal_libraries/: ImageView.hpp
pbrt/exercises/: CMakeLists.txt
pbrt/exercises/src/: CMakeLists.txt  analytical.h  bounds.h  constants.h  experiment.cpp  integrator.h  utility.h
pbrt/exercises/test/: CMakeLists.txt  MainSpec.cpp
ray/: CMakeLists.txt
ray/source/models/: color.h  ray.h  vec3.h
ray/test/: CMakeLists.txt  MainTestSpec.cpp
spline_interpolation_images/: CMakeLists.txt  main.cpp
src/: Analytical.h  CMakeLists.txt  Experiment.cpp  analytical.h  constants.h  experiment.cpp
src/concepts/: General.h
src/differentiate/: Differentiate.cpp  Differentiate.h  differentiate.cpp  differentiate.h
src/models/: Bounds.h  Dimensions.h  ImageMatrixGrayscale.h  Integrator.h  VectorMatrix.h  distribution.h  integrator.h
src/spline_interpolation/: BicubicImageSplineInterpolator.h  SplineEquations.h  bicubic.h  spline_interpolation.h  uioi.h5
test/: CMakeLists.txt  DifferentiateSpec.cpp  ExperimentsOnlySpec.cpp  MainSpec.cpp  ProbabilityDistributionsIntegratorSpec.cpp  SplineInterpolationSpec.cpp
